--- a/themes/trc/sass/_tab-to-dropdown-menu.scss
+++ b/themes/trc/sass/_tab-to-dropdown-menu.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: auto;
   z-index: 98;
   @include desktop {
     flex-direction: row;
